--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 5px solid red;
+  /* border: 5px solid red; */
   margin: 0px 100px 0px 100px;
 
 }
